# shortener

./: Makefile  Readme.md  app.py  pyproject.toml  requirements.txt
test/: test_app.py
