[tool.poetry]
name = "shortener"
version = "0.1.0"
description = ""
authors = ["Sam B <samubalogh@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
attrs = "20.3.0"
click = "7.1.2"
Flask = "1.1.2"
gunicorn = "20.0.4"
iniconfig = "1.1.1"
itsdangerous = "1.1.0"
Jinja2 = "2.11.3"
MarkupSafe = "1.1.1"
packaging = "20.9"
pluggy = "0.13.1"
py = "1.10.0"
pyparsing = "2.4.7"
pytest = "6.2.2"
redis = "3.5.3"
toml = "0.10.2"
Werkzeug = "1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
